# mosin

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  constants.rs  main.rs
src/module/: blocklist.rs  device.rs  doh.rs  mod.rs  packet.rs  sinkhole.rs
tests/: integration_tests.rs
tests/fixtures/: test_blocklist_small.txt
